reworked Result class and derivatives to it, fixed Calculator tests